--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
 <h1>Hello world</h1>
 <p>my first page</p>
+<p><a href="http://comicsia.ru/collections/xkcd">Нажмите
+    сюда</a>, чтобы почитать отличные комиксы.</p>
 </body>
 </html>
