--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
 <h1>Hello world</h1>
 <p>my first page</p>
-<p><a href="http://comicsia.ru/collections/xkcd" title="broken">Нажмите
-    сюда</a>, чтобы почитать отличные комиксы.</p>
+<script>
+    let message = "Привет, мир!";
+    console.log(message);
+</script>
 </body>
 </html>
