--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let message = "Привет, мир!";
-    console.log(message);
+    let name = "Николай";
+    console.log("Привет, " + name);
+    if (name.length > 6) {
+        console.log("Ну и длиннющее же у вас имя!");
+    }
 </script>
 </body>
 </html>
