--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let name = "Николай";
-    console.log("Привет, " + name);
-    if (name.length > 6) {
-        console.log("Ну и длиннющее же у вас имя!");
+    let lemonChicken = false;
+    let beefWithBlackBean = true;
+    let sweetAndSourPork = true;
+    if (lemonChicken) {
+        console.log("Отлично! Я буду курицу с лимоном!");
+    } else if (beefWithBlackBean) {
+        console.log("Заказываю говядину.");
+    } else if (sweetAndSourPork) {
+        console.log("Ладно, закажу свинину.");
     } else {
-        console.log("Имя у вас не из длинных.");
+        console.log("Что ж, остается рис с яйцом.");
     }
 </script>
 </body>
