--- a/index.html
+++ b/index.html
@@ -8,17 +8,12 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let lemonChicken = false;
-    let beefWithBlackBean = true;
-    let sweetAndSourPork = true;
-    if (lemonChicken) {
-        console.log("Отлично! Я буду курицу с лимоном!");
-    } else if (beefWithBlackBean) {
-        console.log("Заказываю говядину.");
-    } else if (sweetAndSourPork) {
-        console.log("Ладно, закажу свинину.");
+    let myName = "Evgeniy";
+
+    if (myName === "Evgeniy") {
+        console.log("Привет мне!");
     } else {
-        console.log("Что ж, остается рис с яйцом.");
+        console.log("Привет незнакомец");
     }
 </script>
 </body>
