--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let myName = "Evgeniy";
+    let myName = "Yuri";
 
     if (myName === "Evgeniy") {
         console.log("Привет мне!");
+    } else if (myName ==="Yuri"){
+        console.log("Привет Папа")
     } else {
         console.log("Привет незнакомец");
     }
