--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         console.log("Привет мне!");
     } else if (myName ==="Yuri"){
         console.log("Привет Папа")
+    } else if (myName ==="Elena"){
+        console.log("Привет Мама")
     } else {
         console.log("Привет незнакомец");
     }
