--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let myName = "Yuri";
+    let myName = "Elena";
 
     if (myName === "Evgeniy") {
         console.log("Привет мне!");
