--- a/index.html
+++ b/index.html
@@ -8,16 +8,8 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let myName = "Elena";
-
-    if (myName === "Evgeniy") {
-        console.log("Привет мне!");
-    } else if (myName ==="Yuri"){
-        console.log("Привет Папа")
-    } else if (myName ==="Elena"){
-        console.log("Привет Мама")
-    } else {
-        console.log("Привет незнакомец");
+    for (let x = 3; x < 10000; x = x * 3) {
+        console.log(x);
     }
 </script>
 </body>
