--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    for (let x = 3; x < 10000; x = x * 3) {
+    let x =3
+    while (x < 10000) {
         console.log(x);
+        x = x * 3
     }
+    console.log("end")
 </script>
 </body>
 </html>
