--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let x =3
-    while (x < 10000) {
-        console.log(x);
-        x = x * 3
+    let animals = ["Кот", "Рыба", "Лемур", "Комодский варан"];
+    for (let i = 0; i < animals.length; i++) {
+        console.log(animals[i] + " - прекрасное животное");
     }
-    console.log("end")
 </script>
 </body>
 </html>
