--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let animals = ["Кот", "Рыба", "Лемур", "Комодский варан"];
-    for (let i = 0; i < animals.length; i++) {
-        console.log(animals[i] + " - прекрасное животное");
-    }
+    let alphabet = "абвгдеёжзийклмнопрстуфхцчшщъыьэюя";
+    let symbol = Math.floor(Math.random() *
+        alphabet.length)
+    console.log(alphabet[symbol])
 </script>
 </body>
 </html>
