start create game

--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let alphabet = "абвгдеёжзийклмнопрстуфхцчшщъыьэюя";
-    let symbol = Math.floor(Math.random() *
-        alphabet.length)
-    let randomString = ""
-    while (randomString < 6) {
-        console.log(randomString + alphabet[symbol])
-    }
-    console.log("end")
+    let name = prompt("How it`s your Name?")
+    console.log("Hello " + name)
 </script>
 </body>
 </html>
