question about cats

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <script>
     let name = prompt("How it`s your Name?")
     console.log("Hello " + name)
+    let likesCats = confirm("Тебе нравятся кошки?");
+    if (likesCats) {
+        console.log("Ты классная кошка!");
+    } else {
+        console.log("Что ж, не проблема. Все равно ты молодец!");
+    }
 </script>
 </body>
 </html>
