--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <p>my first page</p>
 <script>
     let name = prompt("How it`s your Name?")
-    console.log("Hello " + name)
+    alert("Hello " + name)
     let likesCats = confirm("Тебе нравятся кошки?");
     if (likesCats) {
-        console.log("Ты классная кошка!");
+        alert("Ты классная кошка!");
     } else {
-        console.log("Что ж, не проблема. Все равно ты молодец!");
+        alert("Что ж, не проблема. Все равно ты молодец!");
     }
 </script>
 </body>
