--- a/index.html
+++ b/index.html
@@ -8,14 +8,45 @@
 <h1>Hello world</h1>
 <p>my first page</p>
 <script>
-    let name = prompt("How it`s your Name?")
-    alert("Hello " + name)
-    let likesCats = confirm("Тебе нравятся кошки?");
-    if (likesCats) {
-        alert("Ты классная кошка!");
-    } else {
-        alert("Что ж, не проблема. Все равно ты молодец!");
+    let words = [
+        "программа",
+        "макака",
+        "прекрасный",
+        "оладушек"
+    ];
+    // Выбираем случайное слово
+    let word = words[Math.floor(Math.random() * words.length)];
+    // Создаем итоговый массив
+    let answerArray = [];
+    for (let i = 0; i < word.length; i++) {
+        answerArray[i] = "_";
     }
+    let remainingLetters = word.length;
+    // Игровой цикл
+    while (remainingLetters > 0) {
+        // Показываем состояние игры
+        alert(answerArray.join(" "));
+        let guess = prompt("Угадайте букву, или нажмите Отмена для выхода из игры.");
+        if (guess === null) {
+            // Выходим из игрового цикла
+            break;
+        } else if (guess.length !== 1) {
+            alert("Пожалуйста, введите одиночную букву.");
+        } else {
+            // Обновляем состояние игры
+            for (let j = 0; j < word.length; j++) {
+                if (word[j] === guess) {
+                    answerArray[j] = guess;
+                    remainingLetters--;
+                }
+            }
+        }
+        // Конец игрового цикла
+    }
+    // Отображаем ответ и поздравляем игрока
+    alert(answerArray.join(" "));
+    alert("Отлично! Было загадано слово " + word);
+
 </script>
 </body>
 </html>
